syntax = "proto3";

package protobuf;

// Represents a sales record
message AggregatedSensorData {
  int32 sensorId = 1;
  float averageTemperature = 2;
  float averageHumidity = 3;
  float minimumTemperature = 4;
  float maximumTemperature = 5;
  float minimumHumidity = 6;
  float maximumHumidity = 7;
  int64 dataCount = 8;
}